# invest-reports

./: README.md  pyproject.toml  utils.py
src/invest_reports/: __init__.py  cv_report.py  sdr_ndr_utils.py  sdr_report.py  utils.py
src/invest_reports/jinja_report_generators/: cv_report_generator.py  ndr_report_generator.py  sdr_ndr_report_generator.py  sdr_report_generator.py
src/invest_reports/jinja_templates/: accordion-section.html  args-table-section.html  args-table.html  base.html  caption.html  coastal_vulnerability.html  content-grid.html  datatable-dependencies.html  datatable.html  globals.html  metadata.html  raster-plot-img.html  raster-plot-section.html  report.html  sdr-ndr-report.html  styles.html  utils.html  vega-embed-js.html  vegalite-plot-section.html  vegalite-plot.html
tests/: test_coastal_vulnerability.py  test_ndr.py  test_partial_templates.py  test_sdr.py  test_sdr_ndr_template.py  test_sdr_ndr_utils.py  test_utils.py
